@@ -6,6 +6,9 @@ libraries written in Charm for other languages.
 #ifndef __CHARM_API_H
 #define __CHARM_API_H
 
+#include "charm-version.h"
+#include "charm-version-git.h"
+
 #include "conv-config.h" /* for CMK_FORTRAN symbols */
 
 /** Used to define a C language entry point*/
@@ -75,4 +78,3 @@ FTN_NAME(CAPITALNAME,lowername) routine_args { \
 #endif
 
 #endif /*Def(thisHeader) */
-
